removed duplicate files and unused files